--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,15 +7,15 @@ website:
   navbar:
     left:
       - href: index.qmd
-        text: Home
+        text: "Home"
       - href: AboutMe.qmd
-        text: About Me
+        text: "About Me"
       - href: project.qmd
-        text: Project
+        text: "Project"
       - href: freeforall.qmd
-        text: Free for All
+        text: "Free for All"
       - href: resume.qmd
-        text: Resume
+        text: "Resume"
 
 format:
   html:
